Updated photos and product description

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Bitstarter - DishFy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2social-buttons.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
      /* Main body and headings */
 
       body {
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -131,19 +131,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>DishFy</h1>
         </div>
       </div>
       <div class="row-fluid subheading"> 
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography --> 
-          <p class="lead">one sentence description.</p>
+          <p class="lead">Search for restaurants based on your distance, favorite ingredient or house event.</p>
         </div>
       </div>
       <div class="row-fluid picht">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/osaW2Jx.jpg">
         </div>
         
         <!-- We define a new 'action' div to contain statistics, order, and share buttons. -->
@@ -159,12 +159,12 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3><p>of $10,000</p>
+                  <h3>$6,000</h3><p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3><p>days left</p>
+                <h3>45</h3><p>days left</p>
               </div>
             </div>
           </div>
@@ -197,13 +197,12 @@
      <!-- http://placehold.it -->
      <div class="row-fluid section1">
        <div class="span5 offset1 asset">
-         <img class="img-polaroid" src="http://placehold.it/480x300">
+         <img class="img-polaroid" src="http://i.imgur.com/8YVEcQy.jpg">
        </div>
        <div class="span5 copy">
          <p>
-           uidshds ajdsduidhuifd shuvsvdsuv vsaibdids vabvah vaiv vsiviaiaiuh auh agiuh ariiuiahe
-           iuashdi fuasi aishdf  aduishf a adsufh asd  asiha gaoi ah faoiuh adv aiuh faoasiuh f. asd
-           auyg asd fa . aiuh asiuh f uha si siuh siuh d oih diuh a, asuh diu , aiush fiuha sd.
+           DishFy will offer a convenient way to find restaurants around a location. You can search for a restaurant around your current location,
+           based on any particular ingredient or house event. If you are looking for restaurants, this app will find them for you.
          </p>
        </div>
      </div>
@@ -211,12 +210,11 @@
      <div class="row-fluid section2">
        <div class="span5 offset1 copy copy-copy-right">
          <p>
-           Lihas df asdhf , aushd iuh as, iaushd fuh sdgjbn g. H iuash fu, uhas diuh asguh ahfabafbfug v.
-           Sfff, asuh foaisj dfjasn df, iuhas duh aushd g- ahs diuhf asiuhd f. GG aoish fiuh asdkjashd fiu.
+           DishFy also show reviews for the restaurants or bars posted by other users.
          </p>
        </div>
        <div class="span5 asset">
-         <img class="img-polaroid" src="http://placehold.it/480x300">
+         <img class="img-polaroid" src="http://i.imgur.com/qxHHolh.jpg">
        </div>
       </div>
       
