--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Bitstarter</a>
+          <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Home</a></li>
-              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#about">About</a></li>
-              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#contact">Contact</a></li>
+              <li class="active"><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->  
         </div>
