Centered sharing buttons in index.html

--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
      .footer a {
        color: #ccccff;
      } 
-    width: 180px;
-    margin: 0 auto;
-    }
+     div.addthis_toolbox { 
+     width: 180px;
+     margin: 0 auto;
+     }
     </style>
   </head>
   <body style="">
