Added Bitcoin payment

--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
         <div class="span6 offset3 order">
           <!-- Standard Bootstrap button. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-          <button class="btn btn-success btn-large">Preorder</button>
+          <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+          <!-- Coinbase button -->
+          <a class="coinbase-button" data-code="7d46d3354ca782fd683cf4388f74746f" href="https://coinbase.com/checkouts/7d46d3354ca782fd683cf4388f74746f">
+            Pay With Bitcoin</a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
         </div>
         <div class="row-fluid">
