--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <ul class="nav">
               <li class="active"><a href="#home">Home</a></li>
               <li><a href="#about">About</a></li>
+              <li><a href="orders">Orders</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->  
